Removed bottom widget area on mobile.

--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ h4 {
 	border-width: 0px;
 	border-color: transparent;
 	border-style: solid;
+	margin-bottom: 10px;
 }
 
 .alignright {
@@ -102,6 +103,7 @@ h4 {
 	border-width: 0px;
 	border-color: transparent;
 	border-style: solid;
+	margin-bottom: 10px;
 }
 
 /*=========================*/
