Changed theme description.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Handlebar
 Theme URI: http://codingbean.com
 Author: Codingbean
 Author URI: http://codingbean.com
-Description: A clean, retro WordPress theme for coffee addicts.
+Description: A clean, retro WordPress theme for creative people.
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
