--- a/style.css
+++ b/style.css
@@ -666,6 +666,14 @@ h4 {
         -webkit-transform: rotate(360deg);
     }
 }
+@keyframes rotating {
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
+}
 
 .loading {
 	background-color: #292929;
@@ -683,6 +691,7 @@ h4 {
 
 .loading-stache {
 	-webkit-animation: rotating 2s linear infinite;
+	animation: rotating 2s linear infinite;
 }
 
 /*=========================*/
