--- a/style.css
+++ b/style.css
@@ -79,8 +79,8 @@ h4 {
 /* Tagline */
 /*=========================*/
 .lead {
-	font-family: 'Stoke', serif;
-	font-size: 28px;
+	font-family: 'Roboto Slab', serif;
+	font-size: 14px;
 	text-decoration: none;
 	text-transform: lowercase;
 	color: #DDD0C2;
