Updated metadata in CSS file.

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name: Handlebar
-Theme URI: http://codingbean.com
+Theme URI: http://codingbean.org/handlebar
 Author: Codingbean
-Author URI: http://codingbean.com
+Author URI: http://codingbean.org
 Description: A clean, retro WordPress theme for creative people.
-Version: 1.0
+Version: 1.0.2
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: retro, simple, clean, artists, minimal, portfolio
